[package]
name = "bitgrep"
version = "0.1.4"
edition = "2021"
authors = ["Dan Ilan <15796788+jmpfar@users.noreply.github.com>"]
description= "Binary grep for numerical data types"
repository = "https://github.com/jmpfar/bitgrep"
license = "Apache-2.0"
readme = "README.md"
keywords = ["binary", "grep", "forensics", "dfir", "cybersecurity"]
categories = ["command-line-utilities", "development-tools::debugging"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
clap = { version = "4.4.8", features = ["derive"] }
num = "0.4.1"
thiserror = "1.0.50"

[lib]
name = "bitgrep"
path = "src/lib.rs"

[[bin]]
name = "bitgrep"
path = "src/bin/main.rs"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "scanner_bench"
harness = false

[lints.clippy]
# Enable pedantic mode
pedantic = "warn"

# Exclude lints we don't like
needless_return = "allow"
approx_constant = "allow"